{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 42,
  "lineage": "6ec86890-f05d-3a7d-7999-9df0aee644d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tech_nginx_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ca3ca175f37dd66",
            "arn": "arn:aws:ec2:us-east-1:867393420472:instance/i-06bf43f0cd1f61e9f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bf43f0cd1f61e9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067fcdb00e6998693",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-35-174-104-239.compute-1.amazonaws.com",
            "public_ip": "35.174.104.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f14289f56b980005",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c04c69f136b8c82",
            "tags": {
              "Env": "DEV",
              "Name": "tech_nginx-app"
            },
            "tags_all": {
              "Env": "DEV",
              "Name": "tech_nginx-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045acdc7a12a3eb6f"
            ]
          },
          "dependencies": [
            "aws_security_group.tech_nginx_vpc_ssh",
            "aws_subnet.tech_nginx_pub_sn1",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tech_nginx_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:internet-gateway/igw-0d2404f2423dc1920",
            "id": "igw-0d2404f2423dc1920",
            "owner_id": "867393420472",
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tech_nginx_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:loadbalancer/app/techalb/0785cc990603dbf2",
            "arn_suffix": "app/techalb/0785cc990603dbf2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "techalb-699340504.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:867393420472:loadbalancer/app/techalb/0785cc990603dbf2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e9b1f81ad8bf069a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c04c69f136b8c82"
              },
              {
                "subnet_id": "subnet-0b49c237a7bf6ee5e"
              }
            ],
            "subnets": [
              "subnet-04c04c69f136b8c82",
              "subnet-0b49c237a7bf6ee5e"
            ],
            "vpc_id": "vpc-093be7c2e29730695",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tech_nginx_app_vpc_web",
            "aws_subnet.tech_nginx_pub_sn1",
            "aws_subnet.tech_nginx_pub_sn2",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tech_nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:listener/app/techalb/0785cc990603dbf2/1af676dccd9ad80a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:targetgroup/techtg/d77462c827f233e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:867393420472:listener/app/techalb/0785cc990603dbf2/1af676dccd9ad80a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:loadbalancer/app/techalb/0785cc990603dbf2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tech_nginx_app_alb",
            "aws_lb_target_group.tech_nginx_app_tg",
            "aws_security_group.tech_nginx_app_vpc_web",
            "aws_subnet.tech_nginx_pub_sn1",
            "aws_subnet.tech_nginx_pub_sn2",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tech_nginx_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:targetgroup/techtg/d77462c827f233e6",
            "arn_suffix": "targetgroup/techtg/d77462c827f233e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:867393420472:targetgroup/techtg/d77462c827f233e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:867393420472:targetgroup/techtg/d77462c827f233e6-20230718175419971400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:867393420472:targetgroup/techtg/d77462c827f233e6",
            "target_id": "i-06bf43f0cd1f61e9f"
          },
          "dependencies": [
            "aws_instance.tech_nginx_web",
            "aws_lb_target_group.tech_nginx_app_tg",
            "aws_security_group.tech_nginx_vpc_ssh",
            "aws_subnet.tech_nginx_pub_sn1",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tech_nginx_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:route-table/rtb-0e31702ee48e87778",
            "id": "rtb-0e31702ee48e87778",
            "owner_id": "867393420472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2404f2423dc1920",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tech_nginx_ig",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ba14736d1b679f4",
            "route_table_id": "rtb-0e31702ee48e87778",
            "subnet_id": "subnet-0b49c237a7bf6ee5e"
          },
          "dependencies": [
            "aws_internet_gateway.tech_nginx_ig",
            "aws_route_table.tech_nginx_rt",
            "aws_subnet.tech_nginx_pub_sn2",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038466f2717698951",
            "route_table_id": "rtb-0e31702ee48e87778",
            "subnet_id": "subnet-04c04c69f136b8c82"
          },
          "dependencies": [
            "aws_internet_gateway.tech_nginx_ig",
            "aws_route_table.tech_nginx_rt",
            "aws_subnet.tech_nginx_pub_sn1",
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tech_nginx_app_vpc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:security-group/sg-0e9b1f81ad8bf069a",
            "description": "Dev vpc web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all ip and ports outbounds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9b1f81ad8bf069a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tech_nginx_app_vpc_web",
            "name_prefix": "",
            "owner_id": "867393420472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech_nginx_vpc_web"
            },
            "tags_all": {
              "Name": "tech_nginx_vpc_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tech_nginx_vpc_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:security-group/sg-045acdc7a12a3eb6f",
            "description": "Dev vpc ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all ip and ports outbounds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045acdc7a12a3eb6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tech_nginx_vpc_ssh",
            "name_prefix": "",
            "owner_id": "867393420472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech_nginx_vpc_ssh"
            },
            "tags_all": {
              "Name": "tech_nginx_vpc_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_nginx_pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:subnet/subnet-04c04c69f136b8c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c04c69f136b8c82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867393420472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech_nginx_pub_sn"
            },
            "tags_all": {
              "Name": "tech_nginx_pub_sn"
            },
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tech_nginx_pub_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:subnet/subnet-0b49c237a7bf6ee5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49c237a7bf6ee5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "867393420472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech_nginx_pub_sn"
            },
            "tags_all": {
              "Name": "tech_nginx_pub_sn"
            },
            "vpc_id": "vpc-093be7c2e29730695"
          },
          "dependencies": [
            "aws_vpc.tech_nginx_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tech_nginx_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867393420472:vpc/vpc-093be7c2e29730695",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0223c846130fa3243",
            "default_route_table_id": "rtb-03f364bbcb390e0c4",
            "default_security_group_id": "sg-04c23149a5267f06c",
            "dhcp_options_id": "dopt-0e064927f9ece550e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093be7c2e29730695",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f364bbcb390e0c4",
            "owner_id": "867393420472",
            "tags": {
              "Name": "tech_nginx_app"
            },
            "tags_all": {
              "Name": "tech_nginx_app"
            }
          }
        }
      ]
    }
  ]
}